@@ -1,3 +1,12 @@
+SRM (0.5.0-1)
+
+  # New Features
+
+  * Introduced srmConnectorGetSubPixel() to retrieve the subpixel layout of a connected display.
+  
+-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Wed, 24 Jan 2024 12:43:33 -0300
+
+
 SRM (0.4.0-1)
 
   # New Features
